Fix styling on the bag page, align checkout buttons right on large screens and align everything centrally on small medium screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -111,7 +111,7 @@ input[type=number] {
 }
 
 .bag-img {
-    max-width: 220px;
+    max-width: 90%;
     height: auto;
 }
 
